unpackaged/main/default/objects/Case/fields/EngineeringReqNumber__c.field-meta.xml
<CustomField>
	<fullName>EngineeringReqNumber__c</fullName>
	<label>Engineering Req Number</label>
	<length>12</length>
	<type>Text</type>
</CustomField>