unpackaged/main/default/objects/Case/fields/SLAViolation__c.field-meta.xml
<CustomField>
	<fullName>SLAViolation__c</fullName>
	<label>SLA Violation</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>No</fullName>
			</value>
			<value>
				<fullName>Yes</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>