unpackaged/main/default/objects/Case/listViews/AllClosedCases.listView-meta.xml
<ListView>
	<fullName>AllClosedCases</fullName>
	<columns>CASES.CASE_NUMBER</columns>
	<columns>NAME</columns>
	<columns>CASES.SUBJECT</columns>
	<columns>CASES.STATUS</columns>
	<columns>CASES.PRIORITY</columns>
	<columns>CASES.CREATED_DATE</columns>
	<columns>CORE.USERS.ALIAS</columns>
	<filterScope>Everything</filterScope>
	<filters>
		<field>CASES.CLOSED</field>
		<operation>equals</operation>
		<value>1</value>
	</filters>
	<label>All Closed Cases</label>
</ListView>