unpackaged/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
	<fullName>AllOpenCases</fullName>
	<filterScope>Everything</filterScope>
	<filters>
		<field>CASES.CLOSED</field>
		<operation>equals</operation>
		<value>0</value>
	</filters>
	<label>All Open Cases</label>
</ListView>