unpackaged/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
	<fullName>MyCases</fullName>
	<filterScope>Mine</filterScope>
	<label>My Cases</label>
</ListView>